fixed innerContainer alignment for safari and firefox browsers, updated logo

--- a/chatbot/src/app.css
+++ b/chatbot/src/app.css
@@ -986,7 +986,7 @@ body {
   overflow: hidden;
   align-items: center;
   width: 90%;
-  justify-self: center;
+  margin: 0 auto;
   justify-content: center;
 }
 #parent #mainContainer #innerContainer.show {
